# Ess3D

./: .gitignore  CMakeLists.txt  README.md
cmake/: Default.cmake  DefaultCXX.cmake  DefaultFortran.cmake  Utils.cmake
dependencies/lib/Win32/Debug/: CEGUIBase-0_d.lib  CEGUICommonDialogs-0_d.lib  CEGUICoreWindowRendererSet_d.lib  CEGUIOpenGLRenderer-0_d.lib  CEGUISDL2ImageCodec_d.lib  SDL2_d.lib  SDL2_image_d.lib  SDL2main.lib  assimp_d.lib  box2d_d.lib  freetype_d.lib  glew32d.lib
dependencies/lib/Win32/Release/: CEGUIBase-0.lib  CEGUICommonDialogs-0.lib  CEGUICoreWindowRendererSet.lib  CEGUISDL2ImageCodec.lib  SDL2main.lib  box2d.lib  freetype.lib
dependencies/lib/Win64/Debug/: CEGUIBase-0_d.lib  CEGUICommonDialogs-0_d.lib  CEGUICoreWindowRendererSet_d.lib  CEGUIRapidXMLParser_d.lib  CEGUISDL2ImageCodec_d.lib  SDL2_d.lib  SDL2_image_d.lib  SDL2main.lib  assimp_d.lib  box2d_d.lib
dependencies/lib/Win64/Release/: CEGUIBase-0.lib  CEGUICommonDialogs-0.lib  CEGUICoreWindowRendererSet.lib  CEGUIOpenGLRenderer-0.lib  SDL2main.lib  (+4 more)
include/Ess3D/: test.h
include/Ess3D/2d/: Scene2D.h
include/Ess3D/audio/: AudioManager.h
include/Ess3D/core/: Config.h  IGame.h  IGameScreen.h  SceneGraph.h  ScreenManager.h  State.h
include/Ess3D/data/: QuadTree.h
include/Ess3D/errors/: RuntimeException.h
include/Ess3D/gl/: ColorRGBA8.h  FBORenderer.h  FrameBufferObject.h  Shader.h  UV.h  Window.h
include/Ess3D/gui/: GUI.h
include/Ess3D/input/: InputManager.h
include/Ess3D/resources/: ModelCache.h  Texture.h  TextureAtlas.h  TextureAtlasSection.h  TextureCache.h
include/Ess3D/utils/: Timing.h  Utils.h
lib/assimp-4.1.0/lib/: assimp-4.1.0-vc140-mtd.lib
source/: CMakeLists.txt  Ess3D.sln
source/2d/: Scene2D.cpp
source/2d/animations/: Animation.cpp  AnimationManager.cpp
source/2d/camera/: Camera2D.cpp
source/2d/models/: Entity2D.cpp  Object2D.cpp
source/2d/rendering/: B2DebugRenderer.cpp  QuadTreeRenderer.cpp  Renderer2D.cpp  SpriteBatch.cpp
source/2d/traits/: IRenderable2D.cpp
source/2d/utils/: Utils2D.cpp
source/3d/camera/: Camera3D.cpp
source/3d/model/: Mesh.cpp  Model.cpp
source/3d/rendering/: MeshRenderer.cpp
source/Demo/: Bootstrap.cpp  CMakeLists.txt  Game.cpp  Game.h  GameplayScreen.cpp  SceneRenderer.cpp
source/Demo/Resources/Shaders/: Object3D.fs
source/Demo/resources/shaders/: Object3D.vs
source/Ess3D/: Animation.cpp  Animation.h  AnimationManager.cpp  AudioManager.cpp  AudioManager.h  CMakeLists.txt  Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h  ClassDiagram.cd  Ess3D.vcxproj  FrameBufferObject.h  GUI.h  IGame.cpp  IGame.h  IOManager.cpp  IOManager.h  InputManager.cpp  InputManager.h  ResourceManager.h  ScreenManager.h  Shader.cpp  SpriteBatch.h  Texture2D.cpp  TextureAtlas.cpp  TextureAtlas.h  TextureCache.cpp  TextureCache.h  Timing.cpp  Timing.h  Utils.cpp  Utils.h  Vertex.h  Window.cpp  Window.h  definitions.h
source/Ess3D/2d/: Scene2D.cpp  Scene2D.h  SceneGraph.cpp  SceneGraph.h
source/Ess3D/2d/animations/: Animation.h  AnimationManager.cpp  AnimationManager.h
source/Ess3D/2d/camera/: Camera2D.cpp  Camera2D.h
source/Ess3D/2d/model/: IDrawable2D.cpp  IDrawable2D.h  Object2D.cpp  Object2D.h  Texture2D.h  Vertex2D.h
source/Ess3D/2d/models/: Entity2D.cpp  Entity2D.h  Object2D.cpp  Object2D.h  Vertex2D.h
source/Ess3D/2d/rendering/: B2DebugRenderer.cpp  B2DebugRenderer.h  Renderer2D.cpp  Renderer2D.h  SpriteBatch.cpp  SpriteBatch.h
source/Ess3D/2d/textures/: TextureAtlas.cpp  TextureCache.cpp  TextureCache.h
source/Ess3D/2d/traits/: IRenderable2D.cpp  IRenderable2D.h
source/Ess3D/2d/utils/: Utils2D.cpp  Utils2D.h
source/Ess3D/3d/camera/: Camera3D.h
source/Ess3D/3d/model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture3D.h  Vertex3D.h
source/Ess3D/3d/rendering/: MeshRenderer.cpp  MeshRenderer.h
source/Ess3D/audio/: AudioManager.cpp  AudioManager.h
source/Ess3D/core/: Config.cpp  Config.h  IGame.cpp  IGame.h  IGameScreen.h  ScreenManager.cpp  ScreenManager.h  State.cpp  State.h
source/Ess3D/core/traits/: IHandlesInput.cpp  IHandlesInput.h  IInterpolatable.cpp  IInterpolatable.h  IUpdatable.cpp  IUpdatable.h
source/Ess3D/errors/: RuntimeException.cpp  RuntimeException.h
source/Ess3D/gl/: ColorRGBA8.h  FBORenderer.cpp  FBORenderer.h  FrameBufferObject.cpp  FrameBufferObject.h  Shader.cpp  Shader.h  UV.h  Vertex.h  Window.cpp  Window.h
source/Ess3D/gui/: GUI.cpp  GUI.h
source/Ess3D/input/: IOManager.cpp  IOManager.h  InputManager.cpp  InputManager.h
source/Ess3D/resources/: ModelCache.cpp  ModelCache.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  TextureAtlasSection.cpp  TextureAtlasSection.h  TextureCache.cpp  TextureCache.h
source/Ess3D/resources/shaders/: 2D.fs  FBO.vs
source/Ess3D/shaders/: HighlightFilterF.shader  VerticalBlurV.shader
source/Ess3D/textures/: Texture.cpp  Texture.h  TextureAtlas.h  TextureAtlasSection.h  TextureCache.cpp  TextureCache.h
source/Ess3D/utils/: QuadTree.cpp  QuadTree.h  ResourceManager.cpp  ResourceManager.h  Timing.cpp  Timing.h  Utils.cpp  Utils.h
source/Test/: Bootstrap.cpp  CMakeLists.txt  FBORenderer.cpp  FBORenderer.h  Game.cpp  Game.h  GameplayScreen.cpp  GameplayScreen.h  SceneRenderer.cpp  SceneRenderer.h  ScreenIndices.h  Test.vcxproj  Test.vcxproj.filters  Utils.cpp
source/Test/Resources/Shaders/: Base3D.frag.shader  Base3D.vertex.shader
source/audio/: AudioManager.cpp
source/core/: Config.cpp  IGame.cpp  SceneGraph.cpp  ScreenManager.cpp  State.cpp
source/core/traits/: IHandlesInput.cpp  IInterpolatable.cpp  IUpdatable.cpp
source/data/: QuadTree.cpp
source/errors/: RuntimeException.cpp
source/gl/: FBORenderer.cpp  FrameBufferObject.cpp  Shader.cpp  Window.cpp
source/gui/: GUI.cpp
source/input/: InputManager.cpp
source/resources/: ModelCache.cpp  Texture.cpp  TextureAtlas.cpp  TextureAtlasSection.cpp  TextureCache.cpp
source/resources/shaders/: 2D.vs  Base3D.fs  Base3D.vs  FBO.fs
source/shaders/: BlurF.shader  FBOV.shader  FilterV.shader  HorizontalBlurV.shader  Vertex.shader
source/utils/: Timing.cpp  Utils.cpp
(+34 files in other folders)
